--- a/views/admin/imageAdd.ejs
+++ b/views/admin/imageAdd.ejs
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <h2 class="text-center">Image Upload and Crop</h2>
+                <h2 class="text-center">Image Crop and Upload</h2>
                 <button type="button" class="btn btn-primary btn-block mt-3"
                     onclick="document.getElementById('inputFile').click()">Add Image</button>
                 <div class="form-group inputDnD mt-3">
@@ -118,6 +118,7 @@
             }
         }
     }
+
 
 
 
