--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -112,7 +112,7 @@
                                                             Remove offer </button>
                                                         <% } else {%>
                                                             <button class=" btn btn-sm btn-outline-primary rounded
-                                                            font-sm" onclick="showModal('<%= product[i]._id %>')">
+                                                            font-sm" onclick="show12Modal('<%= product[i]._id %>')">
                                                                 Apply offer
                                                             </button>
                                                             <% }%>
