--- a/views/user/whishlist.ejs
+++ b/views/user/whishlist.ejs
@@ -22,8 +22,8 @@
             }
 
             .wishlist-card img {
-                max-width: 100px;
-                height: auto;
+                width: 50px;
+                height: 50px;
                 margin-right: 20px;
             }
 
@@ -112,7 +112,7 @@
                                         <tr id="<%= item.product_Id._id %>">
                                             <td class="align-middle">
                                                 <img src="/images/<%= item.product_Id.image[0] %>"
-                                                    alt="<%= item.product_Id.name %>" class="img-fluid rounded-start" />
+                                                    alt="<%= item.product_Id.name %>" style="height: 100px;width: 80px;"  />
                                             </td>
                                             <td class="align-middle">
                                                 <%= item.product_Id.name %>
