--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -45,7 +45,7 @@
             <div class="col">
               <div id="reportContainer">
                 <div id="printThisDiv">
-                  <% if (salesReport && salesReport.length > 0) { %>
+                  <% if (salesReport && salesReport.length> 0) { %>
                     <table class="table table-striped table-bordered">
                       <thead class="thead-dark" id="reportHeader">
                         <tr class="text-center">
@@ -60,99 +60,115 @@
                         </tr>
                       </thead>
                       <tbody id="reportBody">
-                        <% salesReport.forEach(element => { %>
+                        <% salesReport.forEach(element=> { %>
                           <tr class="text-center">
-                            <td><%= element.user.email %></td>
-                            <td><%= element.user.mobile %></td>
-                            <td><%= element.deliveryAddress %></td>
-                            <td><%= element._id %></td>
-                            <td><%= element.date %></td>
-                            <td><%= element.payment %></td>
-                            <td><%= element.totalAmount %></td>
-                            <td><%= element.status %></td>
+                            <td>
+                              <%= element.user.email %>
+                            </td>
+                            <td>
+                              <%= element.user.mobile %>
+                            </td>
+                            <td>
+                              <%= element.deliveryAddress %>
+                            </td>
+                            <td>
+                              <%= element._id %>
+                            </td>
+                            <td>
+                              <%= element.date %>
+                            </td>
+                            <td>
+                              <%= element.payment %>
+                            </td>
+                            <td>
+                              <%= element.totalAmount %>
+                            </td>
+                            <td>
+                              <%= element.status %>
+                            </td>
                           </tr>
-                        <% }) %>
+                          <% }) %>
                       </tbody>
                     </table>
-                  <% } else { %>
-                    <p class="text-center">No sales</p>
-                  <% } %>
+                    <% } else { %>
+                      <p class="text-center">No sales</p>
+                      <% } %>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        
-        
-
-      <%- include('./layouts/footer.ejs') -%>
 
 
+
+        <%- include('./layouts/footer.ejs') -%>
 
 
 
 
-        <script>
-          const selectedDate = async () => {
-            let startDate = document.getElementById("startDatePicker").value;
-            let endDate = document.getElementById("endDatePicker").value;
-            if (!startDate || !endDate) {
-              console.log("haaaai");
-              Toastify({
-                text: "Please select both start and end dates",
-                duration: 3000,
-                position: "center",
-                style: {
-                  background: "#FFFFFF",
-                  color: "#D21312",
-                },
-              }).showToast();
-              console.log("haaai");
-              return false;
-            }
-
-            let startDateObj = new Date(startDate);
-            let endDateObj = new Date(endDate);
-            if (startDateObj > endDateObj) {
-              console.log('hi');
-              Toastify({
-                text: "Start date cannot be greater than end date",
-                duration: 3000,
-                position: "center",
-                style: {
-                  background: "#FFFFFF",
-                  color: "#D21312",
-                },
-              }).showToast();
-              return false;
-            }
-
-            const today = new Date();
-            if (endDateObj > today) {
-              Toastify({
-                text: "End date cannot be in the future",
-                duration: 3000,
-                position: "center",
-                style: {
-                  background: "#FFFFFF",
-                  color: "#D21312",
-                },
-              }).showToast();
-              return false;
-            }
 
 
+          <script>
+            const selectedDate = async () => {
+              let startDate = document.getElementById("startDatePicker").value;
+              let endDate = document.getElementById("endDatePicker").value;
+              if (!startDate || !endDate) {
+                console.log("haaaai");
+                Toastify({
+                  text: "Please select both start and end dates",
+                  duration: 3000,
+                  position: "center",
+                  style: {
+                    background: "#FFFFFF",
+                    color: "#D21312",
+                  },
+                }).showToast();
+                console.log("haaai");
+                return false;
+              }
 
-            const response = await axios.post("/admin/salesReport", {
-              startDate,
-              endDate,
-            });
-            console.log(response.data);
-            const salesReport = response.data.selectedDate;
-            const reportBody = document.getElementById("reportBody");
-            reportBody.innerHTML = salesReport
-              .map(
-                (element) => `
+              let startDateObj = new Date(startDate);
+              let endDateObj = new Date(endDate);
+              if (startDateObj > endDateObj) {
+                console.log('hi');
+                Toastify({
+                  text: "Start date cannot be greater than end date",
+                  duration: 3000,
+                  position: "center",
+                  style: {
+                    background: "#FFFFFF",
+                    color: "#D21312",
+                  },
+                }).showToast();
+                return false;
+              }
+
+              const today = new Date();
+              if (endDateObj > today) {
+                Toastify({
+                  text: "End date cannot be in the future",
+                  duration: 3000,
+                  position: "center",
+                  style: {
+                    background: "#FFFFFF",
+                    color: "#D21312",
+                  },
+                }).showToast();
+                return false;
+              }
+
+
+
+              const response = await axios.post("/admin/salesReport", {
+                startDate,
+                endDate,
+              });
+              console.log(response.data);
+              const salesReport = response.data.selectedDate;
+              const reportBody = document.getElementById("reportBody");
+              reportBody.innerHTML = salesReport
+                .map(
+                  (element) => `
         <tr>
           <td>${element.user[0].email}</td>
           <td>${element.user[0].mobile}</td>
@@ -164,9 +180,9 @@
           <td>${element.status}</td>
         </tr>
       `
-              )
-              .join("");
-            const tableHeader = `
+                )
+                .join("");
+              const tableHeader = `
         <tr>
                 <th>Email</th>
                 <th>Mobile</th>
@@ -178,55 +194,55 @@
                 <th>Status</th>
         </tr>
       `;
-            const reportHeader = document.getElementById("reportHeader");
-            reportHeader.innerHTML = tableHeader;
-          };
-        </script>
+              const reportHeader = document.getElementById("reportHeader");
+              reportHeader.innerHTML = tableHeader;
+            };
+          </script>
 
 
 
-        <script>
+          <script>
 
-          function showDownloadOptions(divName) {
-            const choice = confirm("Do you want to download as PDF or Excel?");
+            function showDownloadOptions(divName) {
+              const choice = confirm("Do you want to download as PDF or Excel?");
 
-            if (choice) {
-              downloadPDF(divName);
-            } else {
-              downloadExcel(divName);
-            }
-          }
-          function downloadPDF(divName) {
-            const printContents = document.getElementById(divName).innerHTML;
-            const originalContents = document.body.innerHTML;
-            document.body.innerHTML = printContents;
-            window.print();
-            document.body.innerHTML = originalContents;
-          }
-
-          function downloadExcel(divName) {
-            const table = document.getElementById(divName);
-            const rows = table.getElementsByTagName('tr');
-
-            let csvContent = "data:text/csv;charset=utf-8,";
-
-            for (const row of rows) {
-              const cells = row.getElementsByTagName('td');
-              const cellValues = [];
-              for (const cell of cells) {
-                cellValues.push(cell.textContent);
+              if (choice) {
+                downloadPDF(divName);
+              } else {
+                downloadExcel(divName);
               }
-              csvContent += cellValues.join(',') + '\n';
+            }
+            function downloadPDF(divName) {
+              const printContents = document.getElementById(divName).innerHTML;
+              const originalContents = document.body.innerHTML;
+              document.body.innerHTML = printContents;
+              window.print();
+              document.body.innerHTML = originalContents;
             }
 
-            const encodedUri = encodeURI(csvContent);
-            const link = document.createElement('a');
-            link.setAttribute('href', encodedUri);
-            link.setAttribute('download', 'data.csv');
-            document.body.appendChild(link);
+            function downloadExcel(divName) {
+              const table = document.getElementById(divName);
+              const rows = table.getElementsByTagName('tr');
 
-            link.click();
-            document.body.removeChild(link);
-          }
+              let csvContent = "data:text/csv;charset=utf-8,";
 
-        </script>
+              for (const row of rows) {
+                const cells = row.getElementsByTagName('td');
+                const cellValues = [];
+                for (const cell of cells) {
+                  cellValues.push(cell.textContent);
+                }
+                csvContent += cellValues.join(',') + '\n';
+              }
+
+              const encodedUri = encodeURI(csvContent);
+              const link = document.createElement('a');
+              link.setAttribute('href', encodedUri);
+              link.setAttribute('download', 'data.csv');
+              document.body.appendChild(link);
+
+              link.click();
+              document.body.removeChild(link);
+            }
+
+          </script>
